Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2
-
None
-
-
a73e02ebc9 (qt/qtconnectivity/dev) 1834a38279 (qt/qtconnectivity/6.2) 8ca970bf0f (qt/qtconnectivity/6.3) 1834a38279 (qt/tqtc-qtconnectivity/6.2)
Description
The bluez dbus qbluetoothsocket implementation error codes differ slightly for the failed "connectToService" scenarios. This causes the tst_qbluetoothsocket::tst_unsupportedprotocolerror autotest to fail.