Align the bluez dbus socket error codes with other platforms

The qbluetoothsocket::connectToService methods generally
speaking fail with "UnsupportedProtocolError" if the provided data
for the methods are not correct. In some cases the bluez dbus socket
implementation fails with "OperationError" error code causing the
tst_qbluetoothsocket::tst_unsupportedProtocolError autotest to fail.

This commit adjusts these error codes to be aligned with other
platforms. The one exception is the connectToService overload which
takes a port number as a parameter; there the bluez dbus socket error
code can be considered to differ because it does not support it.
Android backend doesn't support it either and provides also the
(same) differing error code. That test is skipped on Android
due to other reasons and doesn't need its own #ifdeffery.

Fixes: QTBUG-101071
Change-Id: Id07c3a27f8bda6cb75fda7b45854943a9800bce0
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit a73e02ebc90971ecc359ff22d8884fe8efbebbed)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>